--- a/index.html
+++ b/index.html
@@ -3,8 +3,70 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+
+    <!-- подклчение шрифтов -->
+    <script src="https://kit.fontawesome.com/d83cea3ece.js" crossorigin="anonymous"></script>
+
   </head>
   <body>
+	<header>
+		<nav>
+			<a href="index.html">
+				<img src="img/logo.png" alt="Логотип магазина готовых шаблонов «Нёрдс»">
+			</a>
+			<ul>
+				<li><a href="">Студия</a></li>
+				<li><a href="">Клиенты</a></li>
+				<li><a href="catalog.html">Магазин</a></li>
+				<li><a href="">Контакты</a></li>
+			</ul>
+			<ul>
+				<li>
+					<button type="button">Корзина</button>
+				</li>
+			</ul>
+		</nav>
+	</header>
+	<main>
+		<h1>Магазин готовых шаблонов</h1>
+
+		<!-- преимущества -->
+		<section>
+			<ul>
+				<li>
+					<img src="img/advantages/1.jpg" alt="">
+					<h3>Веб-сайты</h3>
+					<p>Мир никогда не будет прежни <br>	
+					после такого как увидит ваш сайт</p>
+					<button>Заказать</button>
+				</li>
+				<li>
+					<img src="img/advantages/2.jpg" alt="">
+					<h3>Приложения</h3>
+					<p>Покорите топ-10 приложений в<br>	
+					AppStore и Google Play</p>
+					<button>Заказать</button>
+				</li>
+				<li>
+					<img src="img/advantages/3.jpg" alt="">
+					<h3>Презентация</h3>
+					<p>Вы даже не подозреваете, <br>	
+					насколько вы изумительны!</p>
+					<button>Заказать</button>
+				</li>
+			</ul>
+		</section>
+	</main>
+	<footer>
+		<ul>
+			<li><a href="#">ВК</a></li>
+			<li><a href="#">ФБ</a></li>
+			<li><a href="#">ИНСТ</a></li>
+		</ul>
+		<p><b>Давайте дружить, это выгодно</b><br>
+		   Скидка 10% для друзей из социальных сетей.
+		</p>
+	</footer>
 
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
