--- a/catalog.html
+++ b/catalog.html
@@ -4,28 +4,21 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
 
-    <!-- подклчение шрифтов -->
-    <script src="https://kit.fontawesome.com/d83cea3ece.js" crossorigin="anonymous"></script>
-
   </head>
   <body>
 	<header>
+		<a href="index.html">
+			<img src="img/logo.png" alt="Логотип магазина готовых шаблонов «Нёрдс»">
+		</a>
 		<nav>
-			<a href="index.html">
-				<img src="img/logo.png" alt="">
-			</a>
 			<ul>
-				<li><a href="">Студия</a></li>
-				<li><a href="">Клиенты</a></li>
-				<li><a href="">Магазин</a></li>
-				<li><a href="">Контакты</a></li>
-			</ul>
-			<ul>
-				<li>
-					<button type="button">Корзина</button>
-				</li>
+				<li><a href="#">Студия</a></li>
+				<li><a href="#">Клиенты</a></li>
+				<li><a href="catalog.html">Магазин</a></li>
+				<li><a href="#">Контакты</a></li>
 			</ul>
 		</nav>
+		<a href="#">Корзина</a>
 	</header>
 
 	<!-- сайдбар -->
@@ -62,63 +55,57 @@
 
 			<!-- первая строка -->
 			<ul>
-				<ul>
-					<li>
-						<img src="img/catalog/0.png" alt="">
-					</li>
-					<li>
-						<img src="img/catalog/1.jpg" alt="">
-					</li>					
-				</ul>
-				<ul>
-					<li>
-						<img src="img/catalog/0.1.png" alt="">
-					</li>
-					<li>
-						<img src="img/catalog/2.jpg" alt="">
-					</li>					
-				</ul>				
+				<li>
+					<img src="img/catalog/1.jpg" alt="">
+					<h3>Sedona</h3>
+					<p>Информационный сайт </br>
+					   для туристов</p>
+					<a href="#">9 900 руб</a>	
+				</li>
+				<li>
+					<img src="img/catalog/2.jpg" alt="">
+					<h3>Pink app</h3>
+					<p>Продуктовый лендинг </br>
+					   приложения для iOS и Android</p>
+					<a href="#">9 900 руб</a>	
+				</li>				
 			</ul>
 
 			<!-- вторая строка -->
 			<ul>
-				<ul>
-					<li>
-						<img src="img/catalog/0.1.png" alt="">
-					</li>
-					<li>
-						<img src="img/catalog/3.jpg" alt="">
-					</li>					
-				</ul>
-				<ul>
-					<li>
-						<img src="img/catalog/0.1.png" alt="">
-					</li>
-					<li>
-						<img src="img/catalog/4.jpg" alt="">
-					</li>					
-				</ul>
+				<li>
+					<img src="img/catalog/1.jpg" alt="">
+					<h3>Sedona</h3>
+					<p>Сайт салоны красоты. </br> 
+					   Для мужчин, да</p>
+					<a href="#">9 900 руб</a>	
+				</li>
+				<li>
+					<img src="img/catalog/2.jpg" alt="">
+					<h3>Pink app</h3>
+					<p>Интернет-агазин </br>
+					   вязаных игрушек</p>
+					<a href="#">9 900 руб</a>	
+				</li>			
 			</ul>
 
 			<!-- третья строка -->
 			<ul>
-				<ul>
-					<li>
-						<img src="img/catalog/0.1.png" alt="">
-					</li>
-					<li>
-						<img src="img/catalog/5.jpg" alt="">
-					</li>					
-				</ul>
-				<ul>
-					<li>
-						<img src="img/catalog/0.1.png" alt="">
-					</li>
-					<li>
-						<img src="img/catalog/6.jpg" alt="">
-					</li>					
-				</ul>
-			</ul>			
+				<li>
+					<img src="img/catalog/5.jpg" alt="">
+					<h3>A plus</h3>
+					<p>Лендинг курсов повышения </br> </br> 
+					   квалификации</p>
+					<a href="#">9 900 руб</a>								
+				</li>
+				<li>
+					<img src="img/catalog/6.jpg" alt="">
+					<h3>Кваст</h3>
+					<p>Промо-сайт производителя </br> 
+					   крафтового кваса</p>
+					<a href="#">9 900 руб</a>					
+				</li>
+			</ul>		
 		</section>
 	</main>
 	<footer>
@@ -131,8 +118,6 @@
 		   Скидка 10% для друзей из социальных сетей.
 		</p>
 	</footer>
-
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
 
   </body>
 </html>
