--- a/index.html
+++ b/index.html
@@ -48,8 +48,42 @@
 				</li>
 			</ul>
 		</section>
+		<section class="section__three">
+			<div class="section__three_div">
+				<h2>Мы - маленькая, но гордая
+					дизайн-студия из Краснодара</h2>
+				<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
+				   превыше креатива. Работаем не покладая рук, как роботы.</p>
+				<b>Выполняем заказы на разработку:</b>
+				<ul>
+					<li>&mdash; Веб-сайтов любой сложности</li>
+					<li>&mdash; Мобильных приложений для iOS и Android</li>
+					<li>&mdash; Слайдшоу и видео для корпоративных презентаций</li>
+				</ul>
+			</div>
+			<div class="section__three_divdiv">
+				<img src="http://placehold.it/360x220" alt="">
+				<p>С 2004 года любим точность во всем:</p>
+				<ul class="section__three_ulul">
+					<li>
+						<b>146%</b>
+						<p>EhУровень самоотдачи</p>
+					</li>
+					<li>
+						<b>146%</b>
+						<p>EhУровень самоотдачи</p>
+					</li>
+					<li>
+						<b>146%</b>
+						<p>EhУровень самоотдачи</p>
+					</li>
+				</ul>
+				
+			</div>
+		</section>
 	</main>
 	<footer>
+
 		<ul>
 			<li><a href="#">ВК</a></li>
 			<li><a href="#">ФБ</a></li>
