Первая разметка в index и catalog

--- a/catalog.html
+++ b/catalog.html
@@ -1,169 +1,137 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-
-	<!-- ссылка на подключение css файла -->
-	<link rel="stylesheet" href="css/style.css">
-
-    <title>HTML Academy: Нёрдс</title>
-
-  </head>
-  <body>
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
 	<header>
-		<a href="index.html">
-			<img src="img/svg-nerds/nerds-logo.svg" alt="Логотип магазина готовых шаблонов «Нёрдс»">
+		<a href="#">
+			<img src="" alt="">
 		</a>
 		<nav>
-			<ul>
-				<li><a href="#">Студия</a></li>
-				<li><a href="#">Клиенты</a></li>
-				<li><a href="catalog.html">Магазин</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
+			<a href="#">Студия</a>
+			<a href="#">Клиенты</a>
+			<a href="#">Магазин</a>
+			<a href="#">Контакты</a>
 		</nav>
-		<a class="header_aa" href="#">
-			<img src="img/svg-nerds/cart-icon.svg" alt="">
-		Корзина</a>
+		<a href="#">Корзина</a>
 	</header>
 
-	<section class="c_section_zero">
-		<main class="main_c">
-			<h1>Магазин готовых шаблонов</h1>
-			<!-- сайдбар -->
-			<aside>
+	<main>
+		<section>
+			<div>
+				<h1>Магазин готовых шаблонов</h1>
+			</div>
 
-				<!-- фильтры -->
-				<section>
-					<div>
-						<h3>Соимость</h3>
+			<div>
+				<aside>
+					<form action="">						
+						<fieldset>
+							<legend>Сетка:</legend>
+							<input name="Сетка" type="radio"> Адаптивная
+							<input name="Сетка" type="radio"> Фиксированная
+							<input name="Сетка" type="radio"> Резиновая
+						</fieldset>
+						<fieldset>
+							<legend>Особенности:</legend>
+							<input name="Особенности" type="checkbox"> Слайдер
+							<input name="Особенности" type="checkbox"> Блок преимуществ
+							<input name="Особенности" type="checkbox"> Новости
+							<input name="Особенности" type="checkbox"> Галерея
+							<input name="Особенности" type="checkbox"> Корзина
+						</fieldset>
+						<a href="">Показать</a>
+					</form>
+				</aside>
+				<ul>
+					<li>
+						<img src="" alt="">
+						<img src="" alt="">
+
 						<div>
-	         			</div>
-					</div>
-
-					<ul>
-						<h3>Сетка</h3>
-						<li><input name="grid" type="Radio">Адаптивная</li>
-						<li><input name="grid" type="Radio">Фиксированная</li>
-						<li><input name="grid" type="Radio">Резиновая</li>		
-					</ul>
-					<ul>
-						<h3>Особенности</h3>
-						<li><input name="features"  type="checkbox">Слайдер</li>
-						<li><input name="features"  type="checkbox">Блок преимуществ</li>
-						<li><input name="features"  type="checkbox">Новости</li>
-						<li><input name="features"  type="checkbox">Галерея</li>
-						<li><input name="features"  type="checkbox">Корзина</li>
-					</ul>			
-						<button type="button">Показать</button>
-
-				</section>
-			</aside>
-
-			<!-- Файлы -->
-			<section class="c_section__one"> 
-
-				<!-- первая строка -->
-				<ul class="c_section__ul_one">
-					<li class="c_section__ul_li">
-						<div>
-							<img class="" src="img/svg-nerds/browser.svg">
-							<img src="img/catalog/1.jpg" alt="">
-						</div>
-						<div class="c_section__ul_lii_div2">
-							<div class="c_section__ul_lii_div3">
-								<h3>Sedona</h3>
-								<p>Информационный сайт
-								   для туристов</p>
-								<a href="#">9 900 руб</a>	
-							</div>
-						</div>
+							<h3>Sedona</h3>
+							<p>Информационный сайт для туристов</p>
+							<a href="#">9 900 руб.</a>
+						</div>						
 					</li>
-					<li class="c_section__ul_lii">
+					<li>
+						<img src="" alt="">
+						<img src="" alt="">
+
 						<div>
-							<img class="" src="img/svg-nerds/browser.svg">
-							<img class="" src="img/catalog/2.jpg" alt="">
-						</div>
-						<div class="c_section__ul_lii_div3">
 							<h3>Pink app</h3>
 							<p>Продуктовый лендинг
 							   приложения для iOS и Android</p>
-							<a href="#">9 900 руб</a>	
-						</div>
-					</li>				
-				</ul>
-
-				<!-- вторая строка -->
-				<ul class="c_section__ul_one">
-					<li class="c_section__ul_li">
-						<div>
-							<img src="img/svg-nerds/browser.svg">
-							<img src="img/catalog/1.jpg" alt="">
-						</div>
-						<div class="c_section__ul_lii_div3">
-							<h3>Sedona</h3>
-							<p>Сайт салоны красоты. 
-							   Для мужчин, да</p>
-							<a href="#">9 900 руб</a>	
-						</div>
+							<a href="#">9 900 руб.</a>
+						</div>						
 					</li>
-					<li class="c_section__ul_lii">
+					<li>
+						<img src="" alt="">
+						<img src="" alt="">
+
 						<div>
-							<img src="img/svg-nerds/browser.svg">
-							<img src="img/catalog/2.jpg" alt="">
-						</div>
-						<div class="c_section__ul_lii_div3">
-							<h3>Pink app</h3>
-							<p>Интернет-магазин
+							<h3>Barbershop</h3>
+							<p>Сайт салона красоты.
+							   Для мужчин, да.</p>
+							<a href="#">9 900 руб.</a>
+						</div>						
+					</li>
+					<li>
+						<img src="" alt="">
+						<img src="" alt="">
+
+						<div>
+							<h3>Mishka</h3>
+							<p>тернет-магазин
 							   вязаных игрушек</p>
-							<a href="#">9 900 руб</a>	
-						</div>
-					</li>			
-				</ul>
-
-				<!-- третья строка -->
-				<ul class="c_section__ul_one">
-					<li class="c_section__ul_li">
-						<div>
-							<img src="img/svg-nerds/browser.svg">
-							<img src="img/catalog/5.jpg" alt="">
-						</div>
-						<div class="c_section__ul_lii_div3">
-							<h3>A plus</h3>
-							<p>Лендинг курсов повышения 
-							   квалификации</p>
-							<a href="#">9 900 руб</a>			
-						</div>					
+							<a href="#">9 900 руб.</a>
+						</div>						
 					</li>
-					<li class="c_section__ul_lii">
+					<li>
+						<img src="" alt="">
+						<img src="" alt="">
+
 						<div>
-							<img src="img/svg-nerds/browser.svg">
-							<img src="img/catalog/6.jpg" alt="">
-						</div>
-						<div class="c_section__ul_lii_div3">
+							<h3>A Plus</h3>
+							<p>Лендинг курсов повышения
+					   		   квалификации</p>
+							<a href="#">9 900 руб.</a>
+						</div>						
+					</li>
+					<li>
+						<img src="" alt="">
+						<img src="" alt="">
+
+						<div>
 							<h3>Кваст</h3>
-							<p>Промо-сайт производителя 
+							<p>Промо-сайт производителя
 							   крафтового кваса</p>
-							<a href="#">9 900 руб</a>				
-						</div>	
+							<a href="#">9 900 руб.</a>
+						</div>						
 					</li>
-				</ul>		
-			</section>
-
-		</main>
-	</section>
+				</ul>
+			</div>
+		</section>
+		
+	</main>
 
 	<footer>
 		<ul>
-			<li><a href="#">ВК</a></li>
-			<li><a href="#">ФБ</a></li>
-			<li><a href="#">ИНСТ</a></li>
+			<a href="#">
+				<img src="" alt="">
+			</a>
+			<a href="#">
+				<img src="" alt="">
+			</a>
+			<a href="#">
+				<img src="" alt="">
+			</a>
 		</ul>
 		<div>
 			<h3>Давайте дружить, это выгодно!</h3>
 			<p>Скидка 10% для друзей из социальных сетей.</p>
-		</div>
+		</div>		
 	</footer>
-
-  </body>
+</body>
 </html>
