--- a/index.html
+++ b/index.html
@@ -1,107 +1,65 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-
-	<!-- ссылка на подключение css файла -->
-	<link rel="stylesheet" href="css/style.css">
-
-    <title>HTML Academy: Нёрдс</title>
-
-  </head>
-  <body>
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
 	<header>
-		<a class="header_a" href="index.html">
-			<img src="img/svg-nerds/nerds-logo.svg" alt="Логотип магазина готовых шаблонов «Нёрдс»">
+		<a href="#">
+			<img src="" alt="">
 		</a>
 		<nav>
-			<ul>
-				<li><a href="#">Студия</a></li>
-				<li><a href="#">Клиенты</a></li>
-				<li><a href="catalog.html">Магазин</a></li>
-				<li><a href="#">Контакты</a></li>
-			</ul>
+			<a href="#">Студия</a>
+			<a href="#">Клиенты</a>
+			<a href="catalog.html">Магазин</a>
+			<a href="#">Контакты</a>
 		</nav>
-		<a class="header_aa" href="#">
-			<img src="img/svg-nerds/cart-icon.svg" alt="">
-		Корзина</a>
+		<a href="#">Корзина</a>
 	</header>
 
-	<section class="i_section_zero">
-		<main>
-			<!-- преимущества -->
-			<section class="section__two">
-				<ul>
-					<li>
-						<img src="img/advantages/1.jpg" alt="">
-						<h3>Веб-сайты</h3>
-						<p>Мир никогда не будет прежни	
-						после такого как увидит ваш сайт</p>
-						<a class="section__two_a" href="#">Заказать</a>
-					</li>
-					<li>
-						<img src="img/advantages/2.jpg" alt="">
-						<h3>Приложения</h3>
-						<p>Покорите топ-10 приложений в	
-						AppStore и Google Play</p>
-						<a class="section__two_aa" href="#">Заказать</a>
-					</li>
-					<li>
-						<img src="img/advantages/3.jpg" alt="">
-						<h3>Презентация</h3>
-						<p>Вы даже не подозреваете,	
-						насколько вы изумительны!</p>
-						<a class="section__two_aaa" href="#">Заказать</a>
-					</li>
-				</ul>
-			</section>
-			<section class="section__three">
-				<div class="section__three_div">
-					<h2>Мы - маленькая, но гордая
-						дизайн-студия из Краснодара</h2>
-					<p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет
-					   превыше креатива. Работаем не покладая рук, как роботы.</p>
-					<b>Выполняем заказы на разработку:</b>
-					<ul>
-						<li>&mdash; Веб-сайтов любой сложности</li>
-						<li>&mdash; Мобильных приложений для iOS и Android</li>
-						<li>&mdash; Слайдшоу и видео для корпоративных презентаций</li>
-					</ul>
-				</div>
-				<div class="section__three_divdiv">
-					<img src="http://placehold.it/360x220" alt="">
-					<p>С 2004 года любим точность во всем:</p>
-					<ul class="section__three_ulul">
-						<li>
-							<b>146%</b>
-							<p>EhУровень самоотдачи</p>
-						</li>
-						<li>
-							<b>146%</b>
-							<p>EhУровень самоотдачи</p>
-						</li>
-						<li>
-							<b>146%</b>
-							<p>EhУровень самоотдачи</p>
-						</li>
-					</ul>
-					
-				</div>
-			</section>
-		</main>
-	</section>
+	<main>
+		<section>
+			<ul>
+				<li>
+					<img src="" alt="">
+					<h3>Веб-Сайты</h3>
+					<p>Приложения</p>
+					<a href="#">Презентация</a>
+				</li>
+				<li>
+					<img src="" alt="">
+					<h3>Веб-Сайты</h3>
+					<p>Приложения</p>
+					<a href="#">Презентация</a>
+				</li>
+				<li>
+					<img src="" alt="">
+					<h3>Веб-Сайты</h3>
+					<p>Приложения</p>
+					<a href="#">Презентация</a>
+				</li>
+			</ul>
+		</section>
+		
+	</main>
 
 	<footer>
-			<ul>
-				<li><a href="#">ВК</a></li>
-				<li><a href="#">ФБ</a></li>
-				<li><a href="#">ИНСТ</a></li>
-			</ul>
-			<div>
-				<h3>Давайте дружить, это выгодно!</h3>
-				<p>Скидка 10% для друзей из социальных сетей.</p>
-			</div>
+		<ul>
+			<a href="#">
+				<img src="" alt="">
+			</a>
+			<a href="#">
+				<img src="" alt="">
+			</a>
+			<a href="#">
+				<img src="" alt="">
+			</a>
+		</ul>
+		<div>
+			<h2></h2>
+			<p></p>
+		</div>		
 	</footer>
-
-  </body>
+</body>
 </html>
