Вторая этап разметки "Работа с графикой"
Пытаюсь прикрепить сюда img файлы, но пока не удается.

--- a/catalog.html
+++ b/catalog.html
@@ -6,13 +6,13 @@
 </head>
 <body>
 	<header>
-		<a href="#">
-			<img src="" alt="">
+		<a href="index.html">
+			<img src="img/svg-nerds/nerds-logo.svg" alt="Логотип магазина Нёрдс">
 		</a>
 		<nav>
 			<a href="#">Студия</a>
 			<a href="#">Клиенты</a>
-			<a href="#">Магазин</a>
+			<a href="catalog.html">Магазин</a>
 			<a href="#">Контакты</a>
 		</nav>
 		<a href="#">Корзина</a>
@@ -46,8 +46,8 @@
 				</aside>
 				<ul>
 					<li>
-						<img src="" alt="">
-						<img src="" alt="">
+						<img src="img/svg-nerds/browser.svg" alt="">
+						<img src="img/catalog/1.jpg" alt="">
 
 						<div>
 							<h3>Sedona</h3>
@@ -56,8 +56,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="" alt="">
-						<img src="" alt="">
+						<img src="img/svg-nerds/browser.svg" alt="">
+						<img src="img/catalog/2.jpg" alt="">
 
 						<div>
 							<h3>Pink app</h3>
@@ -67,8 +67,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="" alt="">
-						<img src="" alt="">
+						<img src="img/svg-nerds/browser.svg" alt="">
+						<img src="img/catalog/3.jpg" alt="">
 
 						<div>
 							<h3>Barbershop</h3>
@@ -78,8 +78,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="" alt="">
-						<img src="" alt="">
+						<img src="img/svg-nerds/browser.svg" alt="">
+						<img src="img/catalog/4.jpg" alt="">
 
 						<div>
 							<h3>Mishka</h3>
@@ -89,8 +89,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="" alt="">
-						<img src="" alt="">
+						<img src="img/svg-nerds/browser.svg" alt="">
+						<img src="img/catalog/5.jpg" alt="">
 
 						<div>
 							<h3>A Plus</h3>
@@ -100,8 +100,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="" alt="">
-						<img src="" alt="">
+						<img src="img/svg-nerds/browser.svg" alt="">
+						<img src="img/catalog/6.jpg" alt="">
 
 						<div>
 							<h3>Кваст</h3>
@@ -119,13 +119,13 @@
 	<footer>
 		<ul>
 			<a href="#">
-				<img src="" alt="">
+				<img src="img/svg-nerds/vk-icon.svg" alt="Вконткте">
 			</a>
 			<a href="#">
-				<img src="" alt="">
+				<img src="img/svg-nerds/fb-icon.svg" alt="FaceBook">
 			</a>
 			<a href="#">
-				<img src="" alt="">
+				<img src="img/svg-nerds/insta-icon.svg" alt="Instagram">
 			</a>
 		</ul>
 		<div>
