--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 	<header>
-		<a href="#">
-			<img src="" alt="">
+		<a href="index.html">
+			<img src="img/svg-nerds/nerds-logo.svg" alt="Логотип магазина Нёрдс">
 		</a>
 		<nav>
 			<a href="#">Студия</a>
@@ -15,29 +15,35 @@
 			<a href="catalog.html">Магазин</a>
 			<a href="#">Контакты</a>
 		</nav>
-		<a href="#">Корзина</a>
+		<div>
+			<img src="img/svg-nerds/cart-icon.svg" alt="">
+			<a href="#">Корзина</a>
+		</div>		
 	</header>
 
 	<main>
 		<section>
 			<ul>
 				<li>
-					<img src="" alt="">
+					<img src="img/advantages/1.jpg" alt="">
 					<h3>Веб-Сайты</h3>
-					<p>Приложения</p>
-					<a href="#">Презентация</a>
+					<p>Мир никогда не будетпрежним
+					   после того как увидит ваш сайт!</p>
+					<a href="#">Заказать</a>
 				</li>
 				<li>
-					<img src="" alt="">
-					<h3>Веб-Сайты</h3>
-					<p>Приложения</p>
-					<a href="#">Презентация</a>
+					<img src="img/advantages/2.jpg" alt="">
+					<h3>Приложения</h3>
+					<p>Покорите топ-10 приложений в
+					   AppStore и Google Play</p>
+					<a href="#">Заказать</a>
 				</li>
 				<li>
-					<img src="" alt="">
-					<h3>Веб-Сайты</h3>
-					<p>Приложения</p>
-					<a href="#">Презентация</a>
+					<img src="img/advantages/3.jpg" alt="">
+					<h3>Презентации</h3>
+					<p>Вы даже не подозреваете,
+					   насколько вы изумительны!</p>
+					<a href="#">Заказать</a>
 				</li>
 			</ul>
 		</section>
@@ -47,18 +53,18 @@
 	<footer>
 		<ul>
 			<a href="#">
-				<img src="" alt="">
+				<img src="img/svg-nerds/vk-icon.svg" alt="Вконткте">
 			</a>
 			<a href="#">
-				<img src="" alt="">
+				<img src="img/svg-nerds/fb-icon.svg" alt="FaceBook">
 			</a>
 			<a href="#">
-				<img src="" alt="">
+				<img src="img/svg-nerds/insta-icon.svg" alt="Instagram">
 			</a>
 		</ul>
 		<div>
-			<h2></h2>
-			<p></p>
+			<h3>Давайте дружить, это выгодно!</h3>
+			<p>Скидка 10% для друзей из социальных сетей.</p>
 		</div>		
 	</footer>
 </body>
