Второй этап разметки "Работа с графикой" (исправления)

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<a href="index.html">
-			<img src="img/svg-nerds/nerds-logo.svg" alt="Логотип магазина Нёрдс">
+			<img src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
 		</a>
 		<nav>
 			<a href="#">Студия</a>
@@ -15,7 +15,10 @@
 			<a href="catalog.html">Магазин</a>
 			<a href="#">Контакты</a>
 		</nav>
-		<a href="#">Корзина</a>
+		<div>
+			<img src="img/icons/cart-icon.svg" alt="Корзина">
+			<a href="#">Корзина</a>
+		</div>	
 	</header>
 
 	<main>
@@ -46,8 +49,8 @@
 				</aside>
 				<ul>
 					<li>
-						<img src="img/svg-nerds/browser.svg" alt="">
-						<img src="img/catalog/1.jpg" alt="">
+						<img src="img/catalog/browser.svg" alt="Информационный сайт для туристов">
+						<img src="img/catalog/1.jpg" alt="Шаблон сайта Sedona">
 
 						<div>
 							<h3>Sedona</h3>
@@ -56,8 +59,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="img/svg-nerds/browser.svg" alt="">
-						<img src="img/catalog/2.jpg" alt="">
+						<img src="img/catalog/browser.svg" alt="Продуктовый лендинг приложения для iOS и Android">
+						<img src="img/catalog/2.jpg" alt="Шаблон лендинга Pink app">
 
 						<div>
 							<h3>Pink app</h3>
@@ -67,8 +70,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="img/svg-nerds/browser.svg" alt="">
-						<img src="img/catalog/3.jpg" alt="">
+						<img src="img/catalog/browser.svg" alt="Сайт салона красоты">
+						<img src="img/catalog/3.jpg" alt="Шаблон сайта салона красоты Barbershop">
 
 						<div>
 							<h3>Barbershop</h3>
@@ -78,8 +81,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="img/svg-nerds/browser.svg" alt="">
-						<img src="img/catalog/4.jpg" alt="">
+						<img src="img/catalog/browser.svg" alt="интернет-магазина игрушек">
+						<img src="img/catalog/4.jpg" alt="Шаблон интернет-магазина игрушек Mishka">
 
 						<div>
 							<h3>Mishka</h3>
@@ -89,8 +92,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="img/svg-nerds/browser.svg" alt="">
-						<img src="img/catalog/5.jpg" alt="">
+						<img src="img/catalog/browser.svg" alt="Лендинг курсов повышения квалификации">
+						<img src="img/catalog/5.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus">
 
 						<div>
 							<h3>A Plus</h3>
@@ -100,8 +103,8 @@
 						</div>						
 					</li>
 					<li>
-						<img src="img/svg-nerds/browser.svg" alt="">
-						<img src="img/catalog/6.jpg" alt="">
+						<img src="img/catalog/browser.svg" alt="Промо-сайт производителя кваса">
+						<img src="img/catalog/6.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст">
 
 						<div>
 							<h3>Кваст</h3>
@@ -119,13 +122,13 @@
 	<footer>
 		<ul>
 			<a href="#">
-				<img src="img/svg-nerds/vk-icon.svg" alt="Вконткте">
+				<img src="img/icons/social/vk-icon.svg" alt="Вконткте">
 			</a>
 			<a href="#">
-				<img src="img/svg-nerds/fb-icon.svg" alt="FaceBook">
+				<img src="img/icons/social/fb-icon.svg" alt="FaceBook">
 			</a>
 			<a href="#">
-				<img src="img/svg-nerds/insta-icon.svg" alt="Instagram">
+				<img src="img/icons/social/insta-icon.svg" alt="Instagram">
 			</a>
 		</ul>
 		<div>
