--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<header>
 		<a href="index.html">
-			<img src="img/svg-nerds/nerds-logo.svg" alt="Логотип магазина Нёрдс">
+			<img src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
 		</a>
 		<nav>
 			<a href="#">Студия</a>
@@ -16,7 +16,7 @@
 			<a href="#">Контакты</a>
 		</nav>
 		<div>
-			<img src="img/svg-nerds/cart-icon.svg" alt="">
+			<img src="img/icons/cart-icon.svg" alt="Корзина">
 			<a href="#">Корзина</a>
 		</div>		
 	</header>
@@ -25,21 +25,21 @@
 		<section>
 			<ul>
 				<li>
-					<img src="img/advantages/1.jpg" alt="">
+					<img src="img/advantages/1.jpg" alt="Веб-Сайты">
 					<h3>Веб-Сайты</h3>
 					<p>Мир никогда не будетпрежним
 					   после того как увидит ваш сайт!</p>
 					<a href="#">Заказать</a>
 				</li>
 				<li>
-					<img src="img/advantages/2.jpg" alt="">
+					<img src="img/advantages/2.jpg" alt="Приложения">
 					<h3>Приложения</h3>
 					<p>Покорите топ-10 приложений в
 					   AppStore и Google Play</p>
 					<a href="#">Заказать</a>
 				</li>
 				<li>
-					<img src="img/advantages/3.jpg" alt="">
+					<img src="img/advantages/3.jpg" alt="Презентации">
 					<h3>Презентации</h3>
 					<p>Вы даже не подозреваете,
 					   насколько вы изумительны!</p>
@@ -53,13 +53,13 @@
 	<footer>
 		<ul>
 			<a href="#">
-				<img src="img/svg-nerds/vk-icon.svg" alt="Вконткте">
+				<img src="img/icons/social/vk-icon.svg" alt="Вконткте">
 			</a>
 			<a href="#">
-				<img src="img/svg-nerds/fb-icon.svg" alt="FaceBook">
+				<img src="img/icons/social/fb-icon.svg" alt="FaceBook">
 			</a>
 			<a href="#">
-				<img src="img/svg-nerds/insta-icon.svg" alt="Instagram">
+				<img src="img/icons/social/insta-icon.svg" alt="Instagram">
 			</a>
 		</ul>
 		<div>
