Третий этап разметки "Доступность и формы"

--- a/catalog.html
+++ b/catalog.html
@@ -16,9 +16,9 @@
 			<a href="#">Контакты</a>
 		</nav>
 		<div>
-			<img src="img/icons/cart-icon.svg" alt="Корзина">
+			<img src="img/icons/cart-icon.svg" alt="Кнопка для открытия корзины">
 			<a href="#">Корзина</a>
-		</div>	
+		</div>		
 	</header>
 
 	<main>
@@ -122,13 +122,13 @@
 	<footer>
 		<ul>
 			<a href="#">
-				<img src="img/icons/social/vk-icon.svg" alt="Вконткте">
+				<img src="img/icons/social/vk-icon.svg" alt="Ссылка на группу магазина Нёрдс в Вконткте">
 			</a>
 			<a href="#">
-				<img src="img/icons/social/fb-icon.svg" alt="FaceBook">
+				<img src="img/icons/social/fb-icon.svg" alt="Ссылка на группу магазина Нёрдс в FaceBook">
 			</a>
 			<a href="#">
-				<img src="img/icons/social/insta-icon.svg" alt="Instagram">
+				<img src="img/icons/social/insta-icon.svg" alt="Ссылка на страницу магазина Нёрдс в Instagram">
 			</a>
 		</ul>
 		<div>
