--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<a href="#">Контакты</a>
 		</nav>
 		<div>
-			<img src="img/icons/cart-icon.svg" alt="Корзина">
+			<img src="img/icons/cart-icon.svg" alt="Кнопка для открытия корзины">
 			<a href="#">Корзина</a>
 		</div>		
 	</header>
@@ -25,27 +25,43 @@
 		<section>
 			<ul>
 				<li>
-					<img src="img/advantages/1.jpg" alt="Веб-Сайты">
+					<img src="img/advantages/1.jpg" alt="Мы создаем веб-Сайты">
 					<h3>Веб-Сайты</h3>
 					<p>Мир никогда не будетпрежним
 					   после того как увидит ваш сайт!</p>
 					<a href="#">Заказать</a>
 				</li>
 				<li>
-					<img src="img/advantages/2.jpg" alt="Приложения">
+					<img src="img/advantages/2.jpg" alt="Мы создаем Приложения">
 					<h3>Приложения</h3>
 					<p>Покорите топ-10 приложений в
 					   AppStore и Google Play</p>
 					<a href="#">Заказать</a>
 				</li>
 				<li>
-					<img src="img/advantages/3.jpg" alt="Презентации">
+					<img src="img/advantages/3.jpg" alt="Мы создаем презентации">
 					<h3>Презентации</h3>
 					<p>Вы даже не подозреваете,
 					   насколько вы изумительны!</p>
 					<a href="#">Заказать</a>
 				</li>
 			</ul>
+
+			<div>
+				<form action="#" >
+				    <h2>Напишите нам</h2>
+				    <button type="button" class="btn cancel" onclick="closeForm()">Закрыть</button>
+				    <div>
+					    <label for="name"><b>Ваше имя:</b></label>
+					    <input type="text" placeholder="Имя Фамилия" name="name" required>
+					    <label for="email"><b>Ваш e-mail:</b></label>
+					    <input type="text" placeholder="email@example.com" name="email" required>
+					</div>
+				    <label for="name"><b>Текст вашего письма:</b></label>
+				    <textarea name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
+				    <button type="submit" class="btn">Отправить</button>
+				  </form>
+			</div>
 		</section>
 		
 	</main>
@@ -53,13 +69,13 @@
 	<footer>
 		<ul>
 			<a href="#">
-				<img src="img/icons/social/vk-icon.svg" alt="Вконткте">
+				<img src="img/icons/social/vk-icon.svg" alt="Ссылка на группу магазина Нёрдс в Вконткте">
 			</a>
 			<a href="#">
-				<img src="img/icons/social/fb-icon.svg" alt="FaceBook">
+				<img src="img/icons/social/fb-icon.svg" alt="Ссылка на группу магазина Нёрдс в FaceBook">
 			</a>
 			<a href="#">
-				<img src="img/icons/social/insta-icon.svg" alt="Instagram">
+				<img src="img/icons/social/insta-icon.svg" alt="Ссылка на страницу магазина Нёрдс в Instagram">
 			</a>
 		</ul>
 		<div>
