Третий этап разметки "Доступность и формы" (2)

--- a/catalog.html
+++ b/catalog.html
@@ -16,7 +16,7 @@
 			<a href="#">Контакты</a>
 		</nav>
 		<div>
-			<img src="img/icons/cart-icon.svg" alt="Кнопка для открытия корзины">
+			<img src="img/icons/cart-icon.svg" alt="Корзина">
 			<a href="#">Корзина</a>
 		</div>		
 	</header>
