--- a/index.html
+++ b/index.html
@@ -52,18 +52,18 @@
 				<form action="https://echo.htmlacademy.ru" >
 				    <h2>Напишите нам</h2>
 				    <button type="button" class="btn cancel" onclick="closeForm()">Закрыть</button>
-				    <p>
+				    <div>
 					    <label for="name">Ваше имя:</label>
 					    <input id="name" type="text" placeholder="Имя Фамилия" name="name" required>
-					</p>
-				    <p>
-					    <label for="e-mail">Ваш e-mail:</label>
-					    <input id="e-mail" type="text" placeholder="email@example.com" name="e-mail" required>
-					</p>
-				    <p>
+					</div>
+				    <div>
+					    <label for="email">Ваш e-mail:</label>
+					    <input id="email" type="text" placeholder="email@example.com" name="e-mail" required>
+					</div>
+				    <div>
 					    <label for="text_mail">Текст вашего письма:</label>
 					    <textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
-					</p>
+					</div>
 				    <button type="submit" class="btn">Отправить</button>
 				  </form>
 			</div>
