--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,16 @@
 <html lang="ru">
 <head>
 	<meta charset="UTF-8">
+
+	<!-- ссылка на подключение CSS файла -->
+	<link rel="stylesheet" href="css/style.css">
+
+	<!-- ссылка на подключение CSS файла -->
+	<link rel="stylesheet" href="css/normalize.css">
+
+	<!-- ссылка на шрифт -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+
 	<title>Document</title>
 </head>
 <body>
@@ -23,7 +33,7 @@
 
 	<main>
 		<section>
-			<div>
+			<div class="catalog_title">
 				<h1>Магазин готовых шаблонов</h1>
 			</div>
 
@@ -52,7 +62,7 @@
 						<img src="img/catalog/browser.svg" alt="Информационный сайт для туристов">
 						<img src="img/catalog/1.jpg" alt="Шаблон сайта Sedona">
 
-						<div>
+						<div class="white_back">
 							<h3>Sedona</h3>
 							<p>Информационный сайт для туристов</p>
 							<a href="#">9 900 руб.</a>
@@ -62,7 +72,7 @@
 						<img src="img/catalog/browser.svg" alt="Продуктовый лендинг приложения для iOS и Android">
 						<img src="img/catalog/2.jpg" alt="Шаблон лендинга Pink app">
 
-						<div>
+						<div class="white_back">
 							<h3>Pink app</h3>
 							<p>Продуктовый лендинг
 							   приложения для iOS и Android</p>
@@ -73,7 +83,7 @@
 						<img src="img/catalog/browser.svg" alt="Сайт салона красоты">
 						<img src="img/catalog/3.jpg" alt="Шаблон сайта салона красоты Barbershop">
 
-						<div>
+						<div class="white_back">
 							<h3>Barbershop</h3>
 							<p>Сайт салона красоты.
 							   Для мужчин, да.</p>
@@ -84,7 +94,7 @@
 						<img src="img/catalog/browser.svg" alt="интернет-магазина игрушек">
 						<img src="img/catalog/4.jpg" alt="Шаблон интернет-магазина игрушек Mishka">
 
-						<div>
+						<div class="white_back">
 							<h3>Mishka</h3>
 							<p>тернет-магазин
 							   вязаных игрушек</p>
@@ -95,7 +105,7 @@
 						<img src="img/catalog/browser.svg" alt="Лендинг курсов повышения квалификации">
 						<img src="img/catalog/5.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus">
 
-						<div>
+						<div class="white_back">
 							<h3>A Plus</h3>
 							<p>Лендинг курсов повышения
 					   		   квалификации</p>
@@ -106,7 +116,7 @@
 						<img src="img/catalog/browser.svg" alt="Промо-сайт производителя кваса">
 						<img src="img/catalog/6.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст">
 
-						<div>
+						<div class="white_back">
 							<h3>Кваст</h3>
 							<p>Промо-сайт производителя
 							   крафтового кваса</p>
@@ -120,16 +130,42 @@
 	</main>
 
 	<footer>
-		<ul>
-			<a href="#">
-				<img src="img/icons/social/vk-icon.svg" alt="Ссылка на группу магазина Нёрдс в Вконткте">
-			</a>
-			<a href="#">
-				<img src="img/icons/social/fb-icon.svg" alt="Ссылка на группу магазина Нёрдс в FaceBook">
-			</a>
-			<a href="#">
-				<img src="img/icons/social/insta-icon.svg" alt="Ссылка на страницу магазина Нёрдс в Instagram">
-			</a>
+		<div class="feedback">
+			<!-- в action вписать адрес на который будет поступать информация в форме после нажатия на кнпку "отправить" -->
+			<form action="https://echo.htmlacademy.ru" >
+			    <h2>Напишите нам</h2>
+			    <button type="button" class="btn cancel" onclick="closeForm()">Закрыть</button>
+			    <div>
+				    <label for="name">Ваше имя:</label>
+				    <input id="name" type="text" placeholder="Имя Фамилия" name="name" required>
+				</div>
+			    <div>
+				    <label for="email">Ваш e-mail:</label>
+				    <input id="email" type="text" placeholder="email@example.com" name="e-mail" required>
+				</div>
+			    <div>
+				    <label for="text_mail">Текст вашего письма:</label>
+				    <textarea id="text_mail" name="comment" placeholder="В свободной форме" cols="40" rows="10"></textarea>
+				</div>
+			    <button type="submit" class="btn">Отправить</button>
+			  </form>
+		</div>
+		<ul class="social">
+			<li>
+				<a href="#">
+					<img src="img/icons/social/vk-icon.svg" alt="Ссылка на группу магазина Нёрдс в Вконткте">
+				</a>
+			</li>			
+			<li>
+				<a href="#">
+					<img src="img/icons/social/fb-icon.svg" alt="Ссылка на группу магазина Нёрдс в FaceBook">
+				</a>
+			</li>			
+			<li>
+				<a href="#">
+					<img src="img/icons/social/insta-icon.svg" alt="Ссылка на страницу магазина Нёрдс в Instagram">
+				</a>
+			</li>
 		</ul>
 		<div>
 			<h3>Давайте дружить, это выгодно!</h3>
