Третий этап разметки "Доступность и формы"
Изменил разметку в type="radio"

--- a/catalog.html
+++ b/catalog.html
@@ -42,31 +42,31 @@
 					<form action="https://echo.htmlacademy.ru">						
 						<fieldset>
 							<legend>Сетка:</legend>
-							<input id="grid_adaptive" name="Адаптивная" type="radio"> 
+							<input id="grid_adaptive" name="Сетка" type="radio" value="Адаптивная"> 
 							<label for="grid_adaptive">Адаптивная</label>
 
-							<input id="grid_fix"name="Фиксированная" type="radio">
+							<input id="grid_fix" name="Сетка" type="radio" value="Фиксированная">
 							<label for="grid_fix">Фиксированная</label>
 
-							<input id="grid_rubber" name="Резиновая" type="radio"> 
+							<input id="grid_rubber" name="Сетка" type="radio" value="Резиновая"> 
 							<label for="grid_rubber">Резиновая</label>
 						</fieldset>
 
 						<fieldset>
 							<legend>Особенности:</legend>
-							<input id="features_slid" name="Слайдер" type="checkbox">
+							<input id="features_slid" name="Особенности" type="checkbox" value="Слайдер">
 							<label for="features_slid">Слайдер</label>
 
-							<input id="features_block" name="Блок преимуществ" type="checkbox">
+							<input id="features_block" name="Особенности" type="checkbox" value="Блок преимуществ">
 							<label for="features_block">Блок преимуществ</label>
 
-							<input id="features_new" name="Новости" type="checkbox">
+							<input id="features_new" name="Особенности" type="checkbox" value="Новости">
 							<label for="features_new">Новости</label>
 
-							<input id="features_gallery" name="Галерея" type="checkbox">
+							<input id="features_gallery" name="Особенности" type="checkbox" value="Галерея">
 							<label for="features_gallery">Галерея</label>
 
-							<input id="features_basket" name="Корзина" type="checkbox">
+							<input id="features_basket" name="Особенности" type="checkbox" value="Корзина">
 							<label for="features_basket">Корзина</label>
 						</fieldset>
 						<button type="submit" class="btn">Отправить</button>
