--- a/catalog.html
+++ b/catalog.html
@@ -6,16 +6,16 @@
 	<!-- ссылка на подключение CSS файла -->
 	<link rel="stylesheet" href="css/style.css">
 
-	<!-- ссылка на подключение CSS файла -->
-	<link rel="stylesheet" href="css/normalize.css">
-
 	<!-- ссылка на шрифт -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap" rel="stylesheet">
+
+	<!-- ссылка на подключение CSS файла -->
+	<link rel="stylesheet" href="css/normalize.css">
 
 	<title>Document</title>
 </head>
 <body>
-	<header>
+	<header class="header">
 		<a href="index.html">
 			<img src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
 		</a>
@@ -34,14 +34,14 @@
 	<main>
 		<section>
 			<div class="catalog_title">
-				<h1>Магазин готовых шаблонов</h1>
+				<h1 class="catalog_title">Магазин готовых шаблонов</h1>
 			</div>
 
 			<div>
 				<aside>
 					<form action="https://echo.htmlacademy.ru">						
-						<fieldset>
-							<legend>Сетка:</legend>
+						<fieldset class="grid_block">
+							<legend class="grid_title">Сетка:</legend>
 							<input id="grid_adaptive" name="Сетка" type="radio" value="Адаптивная"> 
 							<label for="grid_adaptive">Адаптивная</label>
 
@@ -52,13 +52,13 @@
 							<label for="grid_rubber">Резиновая</label>
 						</fieldset>
 
-						<fieldset>
-							<legend>Особенности:</legend>
+						<fieldset class="features_block">
+							<legend class="features_title">Особенности:</legend>
 							<input id="features_slid" name="Особенности" type="checkbox" value="Слайдер">
 							<label for="features_slid">Слайдер</label>
 
-							<input id="features_block" name="Особенности" type="checkbox" value="Блок преимуществ">
-							<label for="features_block">Блок преимуществ</label>
+							<input id="features_advantages" name="Особенности" type="checkbox" value="Блок преимуществ">
+							<label for="features_advantages">Блок преимуществ</label>
 
 							<input id="features_new" name="Особенности" type="checkbox" value="Новости">
 							<label for="features_new">Новости</label>
@@ -77,8 +77,8 @@
 						<img src="img/catalog/browser.svg" alt="Информационный сайт для туристов">
 						<img src="img/catalog/1.jpg" alt="Шаблон сайта Sedona">
 
-						<div class="white_back">
-							<h3>Sedona</h3>
+						<div class="card_link">
+							<h3 class="card_title">Sedona</h3>
 							<p>Информационный сайт для туристов</p>
 							<a href="#">9 900 руб.</a>
 						</div>						
@@ -87,8 +87,8 @@
 						<img src="img/catalog/browser.svg" alt="Продуктовый лендинг приложения для iOS и Android">
 						<img src="img/catalog/2.jpg" alt="Шаблон лендинга Pink app">
 
-						<div class="white_back">
-							<h3>Pink app</h3>
+						<div class="card_link">
+							<h3 class="card_title">Pink app</h3>
 							<p>Продуктовый лендинг
 							   приложения для iOS и Android</p>
 							<a href="#">9 900 руб.</a>
@@ -98,8 +98,8 @@
 						<img src="img/catalog/browser.svg" alt="Сайт салона красоты">
 						<img src="img/catalog/3.jpg" alt="Шаблон сайта салона красоты Barbershop">
 
-						<div class="white_back">
-							<h3>Barbershop</h3>
+						<div class="card_link">
+							<h3 class="card_title">Barbershop</h3>
 							<p>Сайт салона красоты.
 							   Для мужчин, да.</p>
 							<a href="#">9 900 руб.</a>
@@ -109,8 +109,8 @@
 						<img src="img/catalog/browser.svg" alt="интернет-магазина игрушек">
 						<img src="img/catalog/4.jpg" alt="Шаблон интернет-магазина игрушек Mishka">
 
-						<div class="white_back">
-							<h3>Mishka</h3>
+						<div class="card_link">
+							<h3 class="card_title">Mishka</h3>
 							<p>тернет-магазин
 							   вязаных игрушек</p>
 							<a href="#">9 900 руб.</a>
@@ -120,8 +120,8 @@
 						<img src="img/catalog/browser.svg" alt="Лендинг курсов повышения квалификации">
 						<img src="img/catalog/5.jpg" alt="Шаблон лендинга курсов повышения квалификации A Plus">
 
-						<div class="white_back">
-							<h3>A Plus</h3>
+						<div class="card_link">
+							<h3 class="card_title">A Plus</h3>
 							<p>Лендинг курсов повышения
 					   		   квалификации</p>
 							<a href="#">9 900 руб.</a>
@@ -131,8 +131,8 @@
 						<img src="img/catalog/browser.svg" alt="Промо-сайт производителя кваса">
 						<img src="img/catalog/6.jpg" alt="Шаблон промо-сайта производителя крафтового кваса Кваст">
 
-						<div class="white_back">
-							<h3>Кваст</h3>
+						<div class="card_link">
+							<h3 class="card_title">Кваст</h3>
 							<p>Промо-сайт производителя
 							   крафтового кваса</p>
 							<a href="#">9 900 руб.</a>
@@ -144,11 +144,11 @@
 		
 	</main>
 
-	<footer>
-		<div class="feedback">
+	<footer class="footer">
+		<div class="footer_feedback">
 			<!-- в action вписать адрес на который будет поступать информация в форме после нажатия на кнпку "отправить" -->
 			<form action="https://echo.htmlacademy.ru" >
-			    <h2>Напишите нам</h2>
+			    <h2 class="footer_feedback_title">Напишите нам</h2>
 			    <button type="button" class="btn cancel" onclick="closeForm()">Закрыть</button>
 			    <div>
 				    <label for="name">Ваше имя:</label>
@@ -165,7 +165,7 @@
 			    <button type="submit" class="btn">Отправить</button>
 			  </form>
 		</div>
-		<ul class="social">
+		<ul class="footer_social">
 			<li>
 				<a href="#">
 					<svg xmlns="http://www.w3.org/2000/svg" width="26" height="15" viewBox="0 0 26 15"><path fill="#FFF" d="M16.138 11.51c.956-.309 2.18 2.04 3.483 2.939.978.681 1.727.534 1.727.534l3.473-.05s1.815-.112.957-1.554c-.071-.12-.503-1.069-2.585-3.022-2.177-2.043-1.882-1.712.739-5.244 1.597-2.153 2.236-3.468 2.036-4.028-.192-.539-1.365-.399-1.365-.399L20.69.713c-.381.001-.704.119-.851.515-.003.004-.621 1.666-1.445 3.079-1.741 2.989-2.436 3.148-2.724 2.961-.661-.433-.494-1.737-.494-2.664 0-2.897.432-4.105-.846-4.417-.427-.104-.739-.172-1.828-.182-1.392-.021-2.574 0-3.244.329-.445.223-.786.712-.579.74.26.035.843.16 1.155.586.401.552.389 1.789.389 1.789s.229 3.411-.54 3.834c-.528.29-1.25-.302-2.803-3.016-.793-1.388-1.392-2.922-1.392-2.922s-.116-.285-.326-.441c-.25-.185-.6-.244-.6-.244L.848.684S.29.7.085.946c-.182.218-.015.668-.015.668s2.909 6.881 6.203 10.347c3.02 3.182 6.452 2.971 6.452 2.971h1.555s.469-.054.709-.312c.224-.24.214-.691.214-.691s-.031-2.109.935-2.419z"/></svg>
@@ -183,7 +183,7 @@
 			</li>
 		</ul>
 		<div>
-			<h3>Давайте дружить, это выгодно!</h3>
+			<h3 class="footer_title">Давайте дружить, это выгодно!</h3>
 			<p>Скидка 10% для друзей из социальных сетей.</p>
 		</div>		
 	</footer>
