Третий этап разметки "Доступность и формы"
Шапку сделал на флотах

--- a/catalog.html
+++ b/catalog.html
@@ -16,23 +16,21 @@
 </head>
 
 <body>
-	<header class="header header-block">
-		<div class="container">
-			<div class="header">
-				<a class="logo--link" href="index.html">
-					<img src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
-				</a>
-				<nav class="nav">
-					<a class="header--link" href="index.html">Студия</a>
-					<a class="header--link" href="#">Клиенты</a>
-					<a class="header--link nav--open--link" href="catalog.html">Магазин</a>
-					<a class="header--link" href="#">Контакты</a>
-				</nav>
-				<div class="basket">
-					<img src="img/icons/cart-icon.svg" alt="Корзина">
-					<a class="header--link" href="#">Корзина</a>
-				</div>	
-			</div>
+	<header class="header-block">
+		<div class="container header">
+			<a class="logo--link" href="index.html">
+				<img src="img/nerds-logo.svg" alt="Логотип магазина Нёрдс">
+			</a>
+			<nav class="nav">
+				<a class="header--link" href="index.html">Студия</a>
+				<a class="header--link" href="#">Клиенты</a>
+				<a class="header--link nav--open--link" href="catalog.html">Магазин</a>
+				<a class="header--link" href="#">Контакты</a>
+			</nav>
+			<div class="basket">
+				<img src="img/icons/cart-icon.svg" alt="Корзина">
+				<a class="header--link" href="#">Корзина</a>
+			</div>	
 		</div>	
 	</header>
 
